--- a/app/views/notifier/activation.html.erb
+++ b/app/views/notifier/activation.html.erb
@@ -3,7 +3,7 @@
 
 <%= t('email.account_activated', :sitename => @sitename)%><br/><br/>
 
-<%= raw(t('email.url_activated', :name => @user.email, :url => "http://" + Site.current.domain.to_s + "/")) %><br/><br/>
+<%= raw(t('email.url_activated', :url => "http://" + Site.current.domain.to_s + "/")) %><br/><br/>
 
 <%= @signature %><br/>
 </body>
