--- a/app/views/recordings/_recording_start_links.html.erb
+++ b/app/views/recordings/_recording_start_links.html.erb
@@ -71,6 +71,7 @@
     });
   });
 
+
   $("#recording-title").editable("<%= route %>", {
     indicator: "<%= t('button.saving_dots') %>",
     tooltip: "<%= t('button.click_to_edit') %>",
@@ -139,6 +140,7 @@
   </br>
   <div id="dropdown-join-webconf" class="dropdown dropdown-tip dropdown-anchor-right">
     <ul class="dropdown-menu">
+      <% if current_user.can_record_meeting? %>
       <li><label>
         <%= check_box_tag 'bigbluebutton_room[record]', t('home.webconf.record'), @room.record, :id => 'record-checkbox' %>
         <span><%= t('home.webconf.record') %></span>
@@ -160,7 +162,8 @@
           </field>
         </div>
       </li>
-      <li class="dropdown-divider"></li>
+      <% end %>
+      <li class="<%= current_user.can_record_meeting? ? "dropdown-divider" : "" %>"></li>
         <li><%= link_to t('home.webconf.invite_people'), inviteroom_invite_path(:type => "webconference", :room => @room.to_param), :id => 'invite_bbb_link' %></li>
         <li>
           <%= mobile_icon_link(join_mobile_bigbluebutton_room_path(@room), t('home.webconf.join_from_mobile')) %>
