--- a/app/views/layouts/_footer_ufrgs.html.erb
+++ b/app/views/layouts/_footer_ufrgs.html.erb
@@ -5,14 +5,51 @@
       <div class="logo-mconf">
       </div>
       <ul>
-        <li><span id="trade_mark"><%= t('mconf') %></span> <%= t('all_rights_reserved') %>.</li>
-      </ul>
-      <ul>
         <li><%= t('footer.find_us') %>:</li>
         <li><a href="http://mconf.org">http://mconf.org</a></li>
       </ul>
     </div>
 
+  <div class="float_left">
+    <ul>
+      <li><span id="trade_mark"><%= t('mconf') %></span></li>
+      <li>-</li>
+      <% unless current_site.external_help.blank? %>
+        <li>
+          <div id="support_select">
+            <%= link_to(image_tag("icons/help.png", :class=>"icon") + " " + t('help'), current_site.external_help) %>
+          </div>
+        </li>
+        <li>-</li>
+      <% end %>
+      <li><%=link_to(t('feedback.send_us'), new_feedback_path(), :id => "feedback_link" )%></li>
+    </ul>
+  </div>
+
+  <div class="float_left" style="clear:left;">
+    <ul>
+      <li><%= t('footer.find_us') %>:</li>
+      <li><a href="http://www.inf.ufrgs.br/prav/gtmconf"><%= t('footer.website') %></a></li>
+      <li>-</li>
+      <li><a href="http://code.google.com/p/mconf"><%= t('footer.gcode') %></a></li>
+      <li>-</li>
+      <li><a href="https://github.com/mconf"><%= t('footer.github') %></a></li>
+    </ul>
+  </div>
+
+
+
     <div class="clearer"></div>
+
+  <div class="languages">
+    <%= t('translate.change') %>:
+    <% links = [] %>
+    <% for locale in ["pt-br", "en"] -%>
+      <% image_tag("flags/" + locale.to_s + ".png", :title=>locale.to_s) %>
+      <% links << link_to(t('locales.' + locale.to_s), session_locale_path(:new_locale => locale.to_s), :method => :post) %>
+    <% end -%>
+    <%= links.join(" - ").html_safe %>
+  </div>
+
   </div>
 </div>
