Layout change in the footer, made the link list vertical, refs #770
Also removed the links in the "find us" section.

--- a/public/stylesheets/screen.css
+++ b/public/stylesheets/screen.css
@@ -992,10 +992,18 @@ div#manage .user a:hover{text-decoration:underline;}
 }
 
 #footer .languages {
-    border-top: 1px solid #E1EEF5;
-    margin-top: 10px;
-    padding-top: 10px;
-    text-align: center;
+  border-top: 1px solid #E1EEF5;
+  margin-top: 10px;
+  padding-top: 10px;
+  text-align: center;
+}
+
+#footer .links li {
+  display: block;
+}
+
+#footer .links li .icon {
+  float: right;
 }
 
 /*Inbox*/
