--- a/app/views/layouts/_footer_ufrgs.html.erb
+++ b/app/views/layouts/_footer_ufrgs.html.erb
@@ -10,36 +10,21 @@
       </ul>
     </div>
 
-  <div class="float_left">
+  <div class="float_left links">
     <ul>
       <li><span id="trade_mark"><%= t('mconf') %></span></li>
-      <li>-</li>
       <% unless current_site.external_help.blank? %>
         <li>
           <div id="support_select">
-            <%= link_to(image_tag("icons/help.png", :class=>"icon") + " " + t('help'), current_site.external_help) %>
+            <%= link_to(t('help'), current_site.external_help) %>
           </div>
         </li>
-        <li>-</li>
       <% end %>
       <li><%=link_to(t('feedback.send_us'), new_feedback_path(), :id => "feedback_link" )%></li>
     </ul>
   </div>
 
-  <div class="float_left" style="clear:left;">
-    <ul>
-      <li><%= t('footer.find_us') %>:</li>
-      <li><a href="http://www.inf.ufrgs.br/prav/gtmconf"><%= t('footer.website') %></a></li>
-      <li>-</li>
-      <li><a href="http://code.google.com/p/mconf"><%= t('footer.gcode') %></a></li>
-      <li>-</li>
-      <li><a href="https://github.com/mconf"><%= t('footer.github') %></a></li>
-    </ul>
-  </div>
-
-
-
-    <div class="clearer"></div>
+  <div class="clearer"></div>
 
   <div class="languages">
     <%= t('translate.change') %>:
