fix #770 Adjusted the footer when the user is logged in and also the footer used at ufrgs main mconf site.
Conflicts:
	app/views/layouts/_footer_ufrgs.html.erb
	public/stylesheets/screen.css

--- a/app/views/layouts/_footer_ufrgs.html.erb
+++ b/app/views/layouts/_footer_ufrgs.html.erb
@@ -1,7 +1,7 @@
 <div id="footer-wrapper">
   <div id="footer">
 
-    <div class="about-mconf">
+    <div class="about-mconf float_right">
       <div class="logo-mconf">
       </div>
       <ul>
@@ -12,7 +12,6 @@
 
   <div class="float_left links">
     <ul>
-      <li><span id="trade_mark"><%= t('mconf') %></span></li>
       <% unless current_site.external_help.blank? %>
         <li>
           <div id="support_select">
