--- a/public/stylesheets/screen.css
+++ b/public/stylesheets/screen.css
@@ -2621,7 +2621,12 @@ div#manage_rooms color{color:#244974;}
 #identification #shib-login {
   text-align: center;
   clear: both;
-  padding-top: 15px;
+  padding: 30px 0;
+}
+
+#identification #shib-login span {
+  display: block;
+  margin-top: 15px;
 }
 
 #identification #left .submit_area {
@@ -3430,4 +3435,70 @@ a.disabled {
 
 .recaptcha_error {
   display: none;
+}
+
+.btn {
+  text-align: center;
+  border: 1px solid #BBB;
+  font-size: 14px !important;
+  padding: 8px 12px;
+  border-radius: 4px;
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+}
+
+.btn:hover {
+  text-decoration: none;
+}
+
+.btn-large {
+  font-size: 20px !important;
+  padding: 11px 19px;
+  border-radius: 6px;
+  -webkit-border-radius: 6px;
+  -moz-border-radius: 6px;
+}
+
+.btn-danger {
+  background-color: #DA4F49;
+  background-image: -webkit-linear-gradient(top, #EE5F5B, #BD362F);
+  background-image: linear-gradient(to bottom, #EE5F5B, #BD362F);
+  background-image: -moz-linear-gradient(top, #EE5F5B, #BD362F);
+  background-repeat: repeat-x;
+  border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
+  color: white;
+  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
+}
+
+.btn-success {
+  background-color: #51A351;
+  background-image: -webkit-linear-gradient(top, #62C462, #51A351);
+  background-image: linear-gradient(to bottom, #62C462, #51A351);
+  background-image: -moz-linear-gradient(top, #62C462, #51A351);
+  background-repeat: repeat-x;
+  border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
+  color: white;
+  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
+}
+
+.btn-primary {
+  background-color: #006DCC;
+  background-image: -webkit-linear-gradient(top, #08C, #04C);
+  background-image: linear-gradient(to bottom, #08C, #04C);
+  background-image: -moz-linear-gradient(top, #08C, #04C);
+  background-repeat: repeat-x;
+  border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
+  color: white;
+  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
+}
+
+.btn-warning {
+  background-color: #FAA732;
+  background-image: -webkit-linear-gradient(top, #FBB450, #F89406);
+  background-image: linear-gradient(to bottom, #FBB450, #F89406);
+  background-image: -moz-linear-gradient(top, #FBB450, #F89406);
+  background-repeat: repeat-x;
+  border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
+  color: white;
+  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
 }
