--- a/app/views/frontpage/index.html.erb
+++ b/app/views/frontpage/index.html.erb
@@ -14,7 +14,7 @@
 
   <div id="content-center">
     <h1 id="content-title">Sistema de Webconferência</h1>
-    <div id="content-core">
+    <div id="content-join">
       <div id="login-button">
         <a href="/secure" class="btn btn-large btn-danger">
           <%= t('frontpage.ufrgs.click_to_access').html_safe %>
@@ -22,6 +22,25 @@
         <span><%= t('frontpage.ufrgs.accessible_to').html_safe %></span>
       </div>
     </div>
+
+    <div id="content-help">
+      <h3><%= t(".docs.title") %></h3>
+
+      <span><%= t(".docs.headline") %></span>
+      <ul>
+        <li>
+          <%= t(".docs.link_index", :url => "http://www.ufrgs.br/cpd/servicos/redes-e-comunicacao/webconferencia-mconf").html_safe %>
+        </li>
+        <li>
+          <%= t(".docs.link_tutorials", :url => "http://www.ufrgs.br/cpd/servicos/redes-e-comunicacao/pasta-tutoriais/tutoriais-mconf/tutoriais-mconf").html_safe %>
+        </li>
+        <li>
+          <%= t(".docs.link_faq", :url => "http://www.ufrgs.br/cpd/servicos/redes-e-comunicacao/webconferencia-mconf#section-2").html_safe %>
+        </li>
+      </ul>
+    </div>
+
+    <div class="clearer"></div>
   </div>
 
 </div>
