Add link to the docs of Mconf on Moodle in the frontpage, refs #874

--- a/app/views/frontpage/index.html.erb
+++ b/app/views/frontpage/index.html.erb
@@ -37,6 +37,9 @@
         <li>
           <%= t(".docs.link_faq", :url => "http://www.ufrgs.br/cpd/servicos/redes-e-comunicacao/webconferencia-mconf#section-2").html_safe %>
         </li>
+        <li>
+          <%= t(".docs.link_moodle", :url => "https://moodleinstitucional.ufrgs.br/tutorial_moodle/tutorial/75.php").html_safe %>
+        </li>
       </ul>
     </div>
 
