Update links to the docs in the frontpage

--- a/app/views/frontpage/show.html.haml
+++ b/app/views/frontpage/show.html.haml
@@ -34,9 +34,9 @@
     %span= t(".docs.headline")
     %ul
       %li
-        = t(".docs.link_index", :url => "http://www.ufrgs.br/cpd/servicos/redes-e-comunicacao/conferencia-via-web-1").html_safe
+        = t(".docs.link_index", :url => "https://www1.ufrgs.br/catalogoti/servicos/servico?servico=13").html_safe
       %li
-        = t(".docs.link_tutorials", :url => "http://www.ufrgs.br/cpd/servicos/redes-e-comunicacao/pasta-tutoriais/tutoriais-mconf/tutoriais-mconf").html_safe
+        = t(".docs.link_tutorials", :url => "https://www.ufrgs.br/documentacaoti/mconf-tutorial-de-uso/").html_safe
       %li
         = t(".docs.link_moodle", :url => "https://moodle.ufrgs.br/suporte/assets/manual/Guia_do_Professor_Moodle_29.pdf").html_safe
       %li
