Update the documentation links in the frontpage

--- a/app/views/frontpage/show.html.haml
+++ b/app/views/frontpage/show.html.haml
@@ -34,11 +34,6 @@
     %span= t(".docs.headline")
     %ul
       %li
-        = t(".docs.link_lumina", :url => "https://lumina.ufrgs.br/course/view.php?id=15").html_safe
-      %li
-        = t(".docs.link_tips", :url => "https://lumina.ufrgs.br/pluginfile.php/19131/mod_resource/content/3/1%20M1%201%20Como%20acessar%20o%20Mconf.pdf").html_safe
-      %li
-        = t(".docs.link_tutorials_1_1", :url => "https://chasquebox.ufrgs.br/data/public/aed39f.php").html_safe
-        = t(".docs.link_tutorials_1_1_desc").html_safe
+        = t(".docs.link_tutorial", :url => "https://www.inf.ufrgs.br/~roesler/site/wp-content/uploads/2020/03/Tutorial_MconfUFRGS.pdf").html_safe
       %li
         = t(".docs.link_details", :url => "https://www1.ufrgs.br/catalogoti/servicos/servico?servico=13").html_safe
