Update the documentation links in the frontpage

--- a/app/views/frontpage/show.html.haml
+++ b/app/views/frontpage/show.html.haml
@@ -34,6 +34,8 @@
     %span= t(".docs.headline")
     %ul
       %li
-        = t(".docs.link_tutorial", :url => "https://www.inf.ufrgs.br/~roesler/site/wp-content/uploads/2020/03/Tutorial_MconfUFRGS.pdf").html_safe
+        = t(".docs.link_tutorial", :url => "https://www.inf.ufrgs.br/~roesler/UFRGS/TutorialMconf/Tutorial_MconfUFRGS.pdf").html_safe
+      %li
+        = t(".docs.link_tutorial_moodle", :url => "https://www.inf.ufrgs.br/~roesler/UFRGS/TutorialMconf/Webconferencia_Mconf_Moodle.pdf").html_safe
       %li
         = t(".docs.link_details", :url => "https://www1.ufrgs.br/catalogoti/servicos/servico?servico=13").html_safe
