--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -20,5 +20,4 @@
     .link-group.logo-mconf
       = image_tag "logos/mconf-white-transp.png", :size => "115x60"
       %span
-        = t('.more_about_mconf') + ':'
-        = link_to "mconf.org", "http://mconf.org"
+        = link_to t('.more_about_mconf'), "http://mconf.com"
