--- a/app/assets/stylesheets/app/application/base.css.scss
+++ b/app/assets/stylesheets/app/application/base.css.scss
@@ -221,6 +221,43 @@ form {
   width: 100%;
 }
 
+#banner-expiring-wrapper {
+  width: 100%;
+  height: 100px;
+  background-color: $alert-danger-font;
+}
+
+#banner-content {    
+  width: 100%;
+  height: 100%;
+  position: relative;
+  display: flex;
+  flex-flow: row nowrap;
+  align-items: center;
+  justify-content: center;
+  font-size: large;
+
+  color: white;
+}
+
+#banner-btn-close {
+  position: absolute;
+  top: 0;
+  right: 0;
+  margin-top: 15px;
+  margin-right: 30px;
+
+  font-size: medium;
+  font-weight: bold;
+  transform: scaleY(85%);
+  color: white;
+  cursor: pointer;
+
+  &:hover {
+      text-decoration: none;
+  }
+} 
+
 #navbar-wrapper {
   margin: 0;
   padding: 0 10px;
