--- a/app/assets/stylesheets/app/shared/_recording_list.css.scss
+++ b/app/assets/stylesheets/app/shared/_recording_list.css.scss
@@ -6,6 +6,27 @@
     font-weight: bold;
   }
 
+  .banner {
+    .banner-wrapper {
+      width: 100%;
+      height: 100px;
+      background-color: $alert-danger-font
+    }
+
+    .banner-content {
+      width: 100%;
+      height: 100%;
+      position: relative;
+      display: flex;
+      flex-flow: row nowrap;
+      align-items: center;
+      justify-content: center;
+      font-size: large;
+    
+      color: white;
+    }
+  }
+
   .thread {
     .thread-title {
       .thread-updated-at {
