--- a/app/views/layouts/_footer_simple.html.haml
+++ b/app/views/layouts/_footer_simple.html.haml
@@ -12,4 +12,4 @@
     .link-group.logo-mconf
       = image_tag "logos/mconf-white-transp.png", :size => "115x60"
       %span
-        = link_to t('.more_about_mconf), "http://mconf.com"
+        = link_to t('.more_about_mconf'), "http://mconf.com"
