--- a/app/views/my/_webconference_room.html.haml
+++ b/app/views/my/_webconference_room.html.haml
@@ -26,7 +26,7 @@
         %ul.dropdown-menu.pull-right
           %li= link_to t('.invite'), invitation_bigbluebutton_room_path(@room), :class => 'open-modal'
           %li= link_to t('.preferences'), edit_my_room_path, :class => 'open-modal', :'data-modal-width' => 'small'
-          %li= link_to t('.recordings'), my_recordings_path
+          %li= link_to t('account'), edit_user_path(current_user)
     %li
       .btn-group.webconf-join-group
         - if running
