--- a/app/views/manage/_recordings.html.haml
+++ b/app/views/manage/_recordings.html.haml
@@ -62,7 +62,7 @@
     %div
       = t('.created_at') + ": "
       %span.tooltipped{title: recording.start_time}
-        = I18n.l(recording.start_time, format: :long)
+        = format_date(recording.start_time, :long)
 
   .playback-types
     %h5= t(".playback_links")
