--- a/app/views/spaces/webconference.html.haml
+++ b/app/views/spaces/webconference.html.haml
@@ -41,16 +41,18 @@
     - if @webconf_room.participant_count == 0
       = t('.webconference.attendees.nobody')
     - else
-      #webconference-all-users
-        %h4= t('.webconference.attendees.all_users') + ":"
-        - @webconf_room.attendees.each_with_index do |attendee, i|
-          - if attendee.role == :moderator
-            = icon_user title: "Moderator"
-          %span
-            - unless i == @webconf_room.attendees.size-1
-              = "#{attendee.full_name}, "
-            - else
-              = attendee.full_name
-      %h4= t('.webconference.attendees.registered_users') + ":"
-      - @webconf_attendees.each do |user|
-        = render :partial => 'users/simple_user', :locals => { :user => user }
+      - if @webconf_users.count > 0
+        %h4= t('.webconference.attendees.registered_users')
+        - @webconf_users.each do |user|
+          = render :partial => 'users/simple_user', :locals => { :user => user }
+      - if @webconf_attendees.count > 0
+        #webconference-all-users
+          %h4= t('.webconference.attendees.all_users')
+          - @webconf_attendees.each_with_index do |attendee, i|
+            - if attendee.role == :moderator
+              = icon_user title: "Moderator"
+            %span
+              - unless i == @webconf_attendees.size-1
+                = "#{attendee.user_name}, "
+              - else
+                = attendee.user_name
